--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn-style {
+        @apply text-[#8D493A] text-center mx-auto font-bold py-2 px-4 hover:bg-[#F8EDE3] border-2 rounded-lg
+    }
+}
