--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,8 @@
     .btn-style {
         @apply text-[#8D493A] text-center mx-auto font-bold py-2 px-4 hover:bg-[#F8EDE3] border-2 rounded-lg
     }
+
+    .h3-home {
+        @apply text-3xl font-semibold mt-6 mb-2
+    }
 }
