--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,6 @@
     }
 
     .h3-home {
-        @apply text-3xl font-semibold mt-6 mb-2
+        @apply text-3xl font-semibold mt-6 mb-2 text-center
     }
 }
